--- a/simple-todos.html
+++ b/simple-todos.html
@@ -4,7 +4,12 @@
 
 <body>
   <div class="container">
-  <header><h1>Todo List</h1></header>
+  <header>
+  	<h1>Todo List</h1>
+  	<form class="new-task">
+  		<input type="text" name="text" placeholder="Add new tasks" />
+  	</form>
+  </header>
   <ul>
   	{{#each tasks}}
   		{{> task}}
