--- a/simple-todos.html
+++ b/simple-todos.html
@@ -10,9 +10,12 @@
   		<input type="checkbox" checked="{{hideCompleted}}" />
   		Hide completed tasks
   	</label>
-  	<form class="new-task">
-  		<input type="text" name="text" placeholder="Add new tasks" />
-  	</form>
+  	{{> loginButtons }}
+  	{{#if currentUser }}
+	  	<form class="new-task">
+	  		<input type="text" name="text" placeholder="Add new tasks" />
+	  	</form>
+  	{{/if}}
   </header>
   <ul>
   	{{#each tasks}}
@@ -28,6 +31,6 @@
   <li class="{{#if checked}}checked{{/if}}">
   	<button class="delete">&times;</button>
   	<input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-  	{{text}}
+  	<span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
